--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 # Dependencies
 /node_modules
 
-# Production
-/build
-
-# Generated files
-.docusaurus
-.cache-loader
+# Mintlify
+.mintlify
 
 # Misc
 .DS_Store
