--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "^3.0.0",
+    "@mintlify/components": "^0.3.15",
     "clsx": "^2.0.0",
+    "mintlify": "^4.2.161",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
