--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,5 @@
 # Top level styles
-StylesPath = styles
+StylesPath = .vale/styles
 MinAlertLevel = suggestion
 IgnoredScopes = code, tt, img, url, a
 SkippedScopes = script, style, pre, figure, code
@@ -14,6 +14,8 @@ mdx = md
 # MDX support
 [*.mdx]
 BasedOnStyles = Vale
+Vale.Terms = NO # Enforces really harsh capitalization rules, keep off
+Vale.Avoid = NO # Too aggressive about common technical terms
 
 # `import ...`, `export ...`
 # `<Component ... />`
