Vale Google Thing

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,7 +4,8 @@ MinAlertLevel = suggestion
 IgnoredScopes = code, tt, img, url, a
 SkippedScopes = script, style, pre, figure, code
 
-# Vocabularies
+Packages = Google
+
 Vocab = Mintlify, Kontor
 
 # This is required since Vale doesn't officially support MDX
@@ -13,9 +14,7 @@ mdx = md
 
 # MDX support
 [*.mdx]
-BasedOnStyles = Vale
-Vale.Terms = NO # Enforces really harsh capitalization rules, keep off
-Vale.Avoid = NO # Too aggressive about common technical terms
+BasedOnStyles = Vale, Google
 
 # `import ...`, `export ...`
 # `<Component ... />`
