--- a/.vale.ini
+++ b/.vale.ini
@@ -6,7 +6,7 @@ SkippedScopes = script, style, pre, figure, code
 
 Packages = Google
 
-Vocab = Mintlify
+# Vocab = Mintlify
 
 # This is required since Vale doesn't officially support MDX
 [formats]
