--- a/.vale.ini
+++ b/.vale.ini
@@ -16,6 +16,9 @@ mdx = md
 [*.mdx]
 BasedOnStyles = Vale, Google
 
+Vale.Terms = NO # Enforces really harsh capitalization rules, keep off
+Vale.Avoid = NO # Too aggressive about common technical terms
+
 # `import ...`, `export ...`
 # `<Component ... />`
 # `<Component>...</Component>`
