--- a/.vale/styles/Google/WordList.yml
+++ b/.vale/styles/Google/WordList.yml
@@ -24,7 +24,6 @@ swap:
   autoupdate: automatically update
   check box: checkbox
   click on: click|click in
-  data are: data is
   disabled?: turn off|off
   fewer data: less data
   file name: filename
@@ -42,3 +41,5 @@ swap:
   tablename: table name
   url: URL
   vs\.: versus
+
+  data is: data are
