--- a/.vale.ini
+++ b/.vale.ini
@@ -4,8 +4,6 @@ MinAlertLevel = suggestion
 IgnoredScopes = code, tt, img, url, a
 SkippedScopes = script, style, pre, figure, code
 
-Packages = Google
-
 Vocab = Mintlify, Kontor
 
 # This is required since Vale doesn't officially support MDX
@@ -14,7 +12,7 @@ mdx = md
 
 # MDX support
 [*.mdx]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale
 
 Vale.Terms = NO # Enforces really harsh capitalization rules, keep off
 Vale.Avoid = NO # Too aggressive about common technical terms
